@@ -1,3 +1,7 @@
+* Sun Mar 09 2014 Martin Kolman <martin.kolman@gmail.com> - 0.45.5
+- fix speed display page in Qt 5/Sailfish GUI
+- show distance from current position for all search results in Qt 5/Sailfish GUI
+- show scroll decorators for most pages in Sailfish GUI
 * Sun Mar 02 2014 Martin Kolman <martin.kolman@gmail.com> - 0.45.4
 - fix theme color parsing on GTK GUI
   - looks like the Silica theme broke it :)
